# ThesisTranslator

./: .gitignore  DEVELOPMENT.md  LICENSE  MINIO_SETUP.md  README.md  WEB_README.md  install.sh  output.md  pyproject.toml  requirements.txt  setup.py  start_minio.sh  start_web.py  stop_minio.sh  web_app.py  web_app_fastapi.py
config/: config_loader.py  minio_config.yaml  settings.py
docs/: api_reference.md  minio_api_reference.md  minio_overview.md  minio_setup.md  minio_usage_examples.md  project_design.md  project_summary.md  test_plan.md  user_guide.md  workflow_diagram.md
examples/: README.md  usage_example.py
frontend/: README.md  next.config.js  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/download/: page.tsx
frontend/src/app/files/: page.tsx
frontend/src/app/translate/: page.tsx
frontend/src/components/: MainLayout.tsx  Navbar.tsx
frontend/src/types/: api.ts
frontend/src/utils/: api.ts  fileUtils.ts
src/: main.py  markdown_generator.py  minio_client.py  minio_file_interface.py  minio_service.py  paper_downloader.py  pdf_parser.py  text_chunker.py  text_cleaner.py  text_sorter.py  translator.py
static/css/: style.css
static/js/: app.js
templates/: index.html
tests/: test_config.py  test_config_loader.py  test_integration.py  test_markdown_generator.py  test_minio_client.py  test_minio_file_interface.py  test_minio_integration.py  test_minio_service.py  test_paper_downloader.py  test_pdf_parser.py  test_text_chunker.py  test_text_cleaner.py  test_text_sorter.py  test_translator.py  test_web_app_fastapi.py
